# first-multimodal-genAI-app

./: LICENSE  README.md  pyproject.toml
multimodal-app/: README.md  api.py  constants.py  main.py  ui.py  utils.py
multimodal-app/.streamlit/: secrets.toml
multimodal-app/pages/: 00_Text_Generation_Evals.py  01_Audio_Generation_Evals.py  02_Image_Generation_Evals.py  03_Video_Generation_Evals.py  04_Transcription_Evals.py
notebooks/: models-everywhere.ipynb
