[tool.poetry]
name = "experiments-in-ai"
version = "0.1.0"
description = ""
authors = ["hugobowne <hugobowne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
transformers = "^4.41.2"
torch = "^2.3.1"
scikit-learn = "^1.5.0"
datasets = "^2.19.2"
diffusers = "^0.28.2"
openai = "^1.33.0"
anthropic = "^0.28.0"
pip = "^24.0"
ai21 = "^2.4.2"
replicate = "^0.26.0"
rich = "^13.7.1"
gradio = "^4.36.0"
tiktoken = "^0.7.0"
streamlit = "^1.35.0"
ollama = "^0.2.1"
sentence-transformers = "^3.0.1"
pillow = "^10.3.0"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.4"
langchainhub = "^0.1.18"
lm-eval = "^0.4.2"
torchaudio = "^2.3.1"
einops = "^0.8.0"
clip = "^0.2.0"
huggingface-hub = "^0.23.3"
watchdog = "^4.0.1"
duckduckgo-search = "^6.1.6"
traceloop-sdk = "^0.22.1"
pyaudio = "^0.2.14"
sounddevice = "^0.4.7"
google-generativeai = "^0.6.0"
modal = "^0.62.231"
cohere = "^5.5.8"
streamlit-webrtc = "^0.47.7"
audio-recorder-streamlit = "^0.0.10"
scipy = "^1.14.0"
librosa = "^0.10.2.post1"
groq = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
