[tool.poetry]
name = "experiments-in-ai"
version = "0.1.0"
description = ""
authors = ["hugobowne <hugobowne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
transformers = "^4.41.2"
torch = "^2.3.1"
scikit-learn = "^1.5.0"
datasets = "^2.19.2"
diffusers = "^0.28.2"
openai = "^1.33.0"
pip = "^24.0"
ai21 = "^2.4.2"
replicate = "^0.26.0"
streamlit = "^1.35.0"
huggingface-hub = "^0.23.3"
audio-recorder-streamlit = "^0.0.10"
scipy = "^1.14.0"
groq = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
